--- a/25 - Event Capture, Propagation, Bubbling and Once/index-FINISHED.html
+++ b/25 - Event Capture, Propagation, Bubbling and Once/index-FINISHED.html
@@ -47,14 +47,11 @@
 
   function logText(e) {
     console.log(this.classList.value);
-    // e.stopPropagation(); // stop bubbling!
+    e.stopPropagation(); // stop bubbling!
     // console.log(this);
   }
 
-  divs.forEach(div => div.addEventListener('click', logText, {
-    capture: false,
-    once: true
-  }));
+  divs.forEach(div => div.addEventListener('click', logText, { capture: false }));
 
   button.addEventListener('click', () => {
     console.log('Click!!!');
